# livefire

./: .gitignore  CHANGELOG.md  CLAUDE.md  README-v0.5.2.md  README.md  build-exe.ps1  requirements.txt  start-debug.bat  testfile 01.livefire
companion-module/: README.md
companion-module/companion-module-livefire/: README.md  package.json  tsconfig.json
livefire/: __init__.py  __main__.py  autosave.py  i18n.py  licensing.py  undo.py  workspace.py
livefire-0.4.1/: CHANGELOG.md  CLAUDE.md  pyproject.toml  requirements-dev.txt  start.bat
livefire-0.4.1/livefire/: __init__.py  __main__.py  crash.py  i18n.py  licensing.py
livefire-0.4.1/livefire/cues/: base.py
livefire-0.4.1/livefire/engines/: __init__.py  audio.py  image.py  osc.py  osc_out.py  powerpoint.py  registry.py
livefire-0.4.1/livefire/playback/: __init__.py  controller.py
livefire-0.4.1/livefire/ui/: cuetoolbar.py  inspector.py  mainwindow.py  splash.py  transport.py
livefire-0.4.1/livefire/ui/dialogs/: __init__.py  about.py  ppt_import.py  preferences.py
livefire-0.4.1/tests/: conftest.py  test_audio_preload.py  test_image_cue.py  test_network_cue.py  test_pptx_count.py  test_showtime_lock.py  test_workspace.py
livefire-0.4.1/tools/: README.md  issue_license.py
livefire/cues/: __init__.py  base.py
tests/: conftest.py  test_audio_engine.py  test_autosave.py  test_companion_integration.py  test_crash.py  test_dmx.py  test_group_cues.py  test_licensing.py  test_network_cue.py  test_osc.py  test_pptx_media.py  test_showtime_lock.py  test_workspace.py
tools/: gen_glyphs.py  genkey.py
(+33 files in other folders)
