[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livefire"
version = "0.3.0"
description = "Cue-based playback applicatie voor Windows live events (QLab-geïnspireerd)"
requires-python = ">=3.11"
authors = [{ name = "Sil Stranders" }]
readme = "README.md"

[project.scripts]
livefire = "livefire.__main__:main"

[tool.setuptools.packages.find]
include = ["livefire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
